[package]
name = "entity-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
futures-intrusive = "0.4"
image = { version = "0.25", features = ["jpeg"] }
wgpu = "0.20"
bytes = "1"
async-stream = "0.3"
cgmath = "0.18"
bytemuck = { version = "1.13", features = ["derive"] }
futures = "0.3"
rusttype = "0.9"
imageproc = { version = "0.24", default-features = false, features = ["property-testing"] }
ab_glyph = "0.2.30"
